deploy/kustomize/components/ingress-traefik/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: lib-manager-go-strip-prefix
spec:
  stripPrefix:
    prefixes:
      - /api
